[package]
name = "assignment-3-solution"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.19", features = ["v4", "serde"] }
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
log = "0.4"
rand = "0.9"
module_system = { path = "../../la1/solution", package = "assignment-1-solution" }

[lib]
name = "assignment_3_solution"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"
